# EquationSolver

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Jenkinsfile_test  Usefull_commands.md  User_guide_docker.txt  explain_jenkinsfile.txt  last_jenkins_fonctionnel_but_cpp_bizarre.txt  main.cpp  normes_c_cpp.md  rebuild.sh  run_solver.sh
CApp/: CMakeLists.txt  main.c
CppApp/: CMakeLists.txt  main.cpp
